<resources>
    <string name="app_name" translatable="false">Sua Consulta</string>
    <!-- Strings related to login -->
    <string name="email" translatable="false">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="msg_login">Ainda não é cadastrado?</string>
    <string name="cadastre">Cadastre-se</string>

    <!-- Strings related to cadastro -->
    <string name="tituloCadastro">Crie sua conta</string>
    <string name="dadosPessoais">Dados Pessoais</string>
    <string name="dadosConta">Dados da Conta</string>
    <string name="nome">Nome*</string>
    <string name="numSus">Nº do SUS*</string>
    <string name="cpf">CPF*</string>
    <string name="nascimento">Data de nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sexo">Sexo*</string>

    <!-- Strings related to home -->
    <string name="sus">SUS</string>
    <string name="consultas">Minhas Consultas</string>
    <string name="descConsultas">Sua lista de consultas</string>
    <string name="localSaude">Unidade de Saúde</string>
    <string name="descLocalSaude">Encontre uma próximo a você</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="descMedicamentos">Lembre-se de tomar seus medicamentos</string>
    <string name="conta">Conta</string>
    <string name="descConta">Verifique suas informações</string>

    <!-- Strings related to home -->
    <string name="minhasConsultas">Minhas Consultas</string>
    <string name="agendadas">Agendadas</string>
    <string name="listaEspera">Lista de espera</string>

    <string name="endereco">Endereco</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="editar">Editar</string>
    <string name="sair">Sair</string>
    <string name="alterarSenha">Alterar senha</string>
    <string name="title_home">Home</string>

    <string name="buscar_local">Onde busca atendimento?</string>

    <string name="lembrete">Lembrete de medicamentos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_buscar_unidade_medica">Map</string>
    <string name="title_activity_editar_informacoes">EditarInformacoes</string>
    <string name="title_activity_criar_alarme">CriarAlarme</string>
</resources>
