<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".HomeActivity">

    <View
        android:id="@+id/divider4"
        android:layout_width="2dp"
        android:layout_height="370dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorButtonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <ImageView
        android:id="@+id/imageView2"
        style="@style/Animation.AppCompat.Dialog"
        android:layout_width="0dp"
        android:layout_height="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@drawable/layout_shadow_grey"/>

    <ImageView
        android:id="@+id/imageCartao"
        android:layout_width="296dp"
        android:layout_height="153dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/cartao_bg" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="63dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icons8_user_male_48"
        app:layout_constraintEnd_toEndOf="@+id/imageCartao"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/imageCartao"
        app:layout_constraintTop_toTopOf="@+id/imageCartao" />

    <TextView
        android:id="@+id/tvSUS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sus"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageCartao"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/imageCartao" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageCartao"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="@+id/imageCartao"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:text="Nome" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/imageCartao"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/imageCartao"
        app:layout_constraintTop_toBottomOf="@+id/tvNome"
        tools:text="xxxxxxxx" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="331dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCartao">

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="166dp"
            android:layout_row="0"
            android:layout_column="0"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icons8_plano_de_saude_50" />

            <TextView
                android:id="@+id/tvConsultas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consultas"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescConsultas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descConsultas"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="166dp"
            android:layout_row="0"
            android:layout_column="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icons8_encontre_clinica" />

            <TextView
                android:id="@+id/tvSaude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/localSaude"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescSaude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descLocalSaude"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="166dp"
            android:layout_row="1"
            android:layout_column="0"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icons8_pilula_50" />

            <TextView
                android:id="@+id/tvMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicamentos"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descMedicamentos"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="166dp"
            android:layout_row="1"
            android:layout_column="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icons8_usuario_50" />

            <TextView
                android:id="@+id/tvConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conta"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descConta"
                android:textAlignment="center" />
        </LinearLayout>
    </GridLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorButtonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.613" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorGreenDarck"
        app:fabCustomSize="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/icons8_plus_math_30" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/colorButtonNormal" />

</android.support.constraint.ConstraintLayout>
